Bumped madcolor to latest version. Added minColorRange parameter to avoid too dark screen.

--- a/web/style.css
+++ b/web/style.css
@@ -1,5 +1,5 @@
 body {
-	background : black;
+	background : #333333;
 	color : white;
 	font-family : "Ubuntu Mono";
 	font-size : 13px;
